--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AndroidFIrebaseRealtimeDatabase</string>
     <string name="add_task_button">Add Task</string>
+    <string name="parse_server_url">http://localhost:1337/parse</string>
+    <string name="parse_app_id">parseTest</string>
 </resources>
